--- a/saasoft/package.json
+++ b/saasoft/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.0.3",
+    "@primevue/forms": "^4.3.3",
     "pinia": "^3.0.2",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.3",
